json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,96 @@
 {
  "items": [
   {
+    "id": "-9Y95OHIQQit6P8XfTgN_w",
+    "url": "https://remote.co/job/nocturnist-telemedicine/",
+    "title": "Nocturnist Telemedicine",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Doctor on Demand",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 14, 2018 5:34:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Nocturnist Telemedicine at <span>Doctor on Demand</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Medical Practice | Remote | Full-Time</strong></p><p><strong>JOB DESCRIPTION</strong></p><p>Doctor On Demand is hiring for US Board Certified full-time Nocturnist employee positions across the country with specialty focus in Family Medicine, Emergency Medicine, Urgent Care and Internal Meds/Peds. Best-in-class EMR platform: User-friendly, web-based EMR platform built in-house by our Engineering Team which is highly rated by our physician staff. Start a conversation with us and learn how you can positively impact the lives of patients and play a role in improving healthcare.</p><p><strong>Full-time:</strong></p><ul><li><strong>Flexible overnight scheduling options</strong></li><li>401k, Benefits and CME resources</li><li>Full malpractice and tail coverage</li><li>Full service processing and coverage of cost for additional state licensure</li></ul><p><strong>About Doctor On Demand</strong></p><p>Doctor On Demand is a nationwide healthcare service that provides video visits with board-certified physicians, psychiatrists and licensed psychologists via smartphones, tablets, and desktop computers. Patients download the Doctor On Demand app or visit www.doctorondemand.com, provide a list of their symptoms, and are connected for a video visit within minutes. Prescriptions, if needed, are sent directly to the pharmacy of choice. Doctor On Demand physicians can also order lab work, allowing for the treatment of a broader range of conditions and chronic care management.</p><p>Through its 5-star rated mobile application and website, consumers can access board-certified physicians in all 50 states and the District of Columbia with an average wait time of 5 minutes, 24 hours a day, 7 days a week. Doctor On Demand delivers services through employers, health plans, and directly to consumers. While insurance isn’t required, tens of millions of Americans enjoy covered medical and mental health visits.</p><p>Doctor On Demand is headquartered in San Francisco with offices in Minneapolis and Washington, D.C.</p>        </div><div>        <a href='https://careers.jobscore.com/careers/doctorondemand/jobs/remote-employed-nocturnist-telemedicine-bgAktmn3Gr6k6meMg-44q7' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "8b2H6o55SHq-N8YtGM_1_g",
+    "url": "https://remote.co/job/medical-coder-claims-edit/",
+    "title": "Medical Coder, Claims Edit",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Signature Performance",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 13, 2018 7:02:52 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Medical Coder, Claims Edit at <span>Signature Performance</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Medical Coder / Claims Edit</strong></p><p><strong>Remote #678</strong></p><p><strong>POSTING LOCATION: Remote/Nationwide</strong></p><p><strong>Status: Full-time</strong></p><p><strong>Job Description</strong></p><p><strong>Out-Patient. Emergency, Ambulatory Surgery and Ancillary Services</strong></p><p><strong>WHAT YOU’LL DO</strong>: Responsible for assignment of accurate Evaluation and Management (E&amp;M) codes, ICD-10 diagnoses, current procedural terminology (CPT) and Healthcare Common Procedure Coding System (HCPCS), modifiers and quantities derived from medical record documentation (paper or electronic) for outpatient , emergency, ambulatory surgery and ancillary service visits.</p><p><strong>QUALIFICATIONS:</strong></p><p><strong>Required knowledge and skills</strong></p><ul><li>Position requires excellent computer/communication skills for provider and staff interactions</li><li>Knowledge of anatomy/physiology and disease process, medical terminology, coding guidelines, documentation requirements, familiarity with medications and reimbursement guidelines</li><li>Candidate must have ability to handle multiple projects and appropriately prioritize tasks to meet deadlines</li><li>Candidate must have excellent organizational skills, able to understand and follow individual client Standard Operating Procedures</li><li>We are looking for 4 coders to fill this role:</li><li>1. E/M profee<br>2. ER facility side ICD10.<br>3. OP clinic multispeciality providers<br>4. Radiology ancillary (profee, IP, IVR, OP, ECG)</li></ul><p><strong>Education/Certification</strong></p><p><strong>Current AAPC or AHIMA coding certification required:</strong></p><ul><li>Registered Health Information Technologist (RHIT)</li><li>Registered Health Information Administrator (RHIA)</li><li>Certified Professional Coder (CPC)</li><li>Certified Coder Specialist – Physician (CCS-P)</li></ul><p>Education must be accredited by an accrediting institution recognized by the American Health Information Management Association (AHIMA) and American Academy of Professional Coders (AAPC).</p><p><strong>Continuing Education and Recertification</strong>: Required continuing education must be completed in accordance with AAPC or AHIMA requirements and certification maintained.</p><p>Signature Performance will assist.</p><p><strong>Experience</strong>: a minimum of three years’ coding experience is required.</p><p><strong>SPECIFIC TASKS</strong></p><ul><li>Responsible for assignment of accurate E&amp;M, ICD-10, CPT and HCPCS codes and modifiers from medical record documentation</li><li>Identifies and abstracts information from medical records (paper or electronic) for special studies and audits, internal and external</li><li>Works within various client systems (Epic, McKesson, AllScripts, etc.), including applicable coding compliance editor software to ensure records are accurately coded</li><li>Follows established query process to clarify documentation to support coding assignments</li><li>May provide feedback to coders or physicians. Feedback will be presented in a supportive and educational manner</li><li>Works closely with the Coding and or QA Manager during QA audit process</li><li>Ensures all required component parts of the medical record that pertain to coding are present, accurate and comply with CMS, JCAHO and client requirements</li><li>Maintains productivity and accuracy requirements as outlined for each client. Unless otherwise stated, coding productivity follows AHIMA standards.</li></ul>        </div><div>        <a href='https://recruiting.adp.com/srccar/public/nghome.guid?c=1145407&amp;d=ExternalCareerSite&amp;prc=RMPOD1&amp;r=5000407751906' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "tS8AtjyCRDi0booD5AF6mw",
     "url": "https://remote.com/jobs/browse/preview/bookkeeper-4",
     "title": "Bookkeeper",
