json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,51 @@
 {
  "items": [
   {
+    "id": "7T9DiNMTR7-9J__ASBHg5g",
+    "url": "https://jobspresso.co/job/crossover-anywhere-various-telecom-business-consultant/",
+    "title": "Telecom Business Consultant",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Crossover",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 100000,
+      "maxValue": 100000,
+      "info": "",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 14, 2018 11:11:02 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2> Telecom Business Consultant</h2><div>Various<br></div><div>Anywhere<br></div><div>$100000 USD<br></div><div>Company: Crossover<br></div><div>Full Time<br></div><h3>Overview</h3><p>We’re running an Online Hiring Event this Saturday to hire Telecom Business Consultants ($100k/yr).</p><p>Online Hiring Events are live forums designed to enable you to understand the role and requirements through an interactive Q&amp;A session followed by a self-directed testing process. The testing takes between 3-5 hours to complete. It’s worth taking the time to finish all the tests because we evaluate every single complete application to find the top talent.</p><p>This event will include all testing required to apply for the role. Upon grading the tests, and if you advance, we will set up an interview with the hiring manager.</p><p>The Telecom Consultant will work closely with the Chief Marketing Officer in advising Optiva’s more than 100 global mobile operators on key business issues such as acquisition, revenue, churn and cost.</p><p>He/she will be responsible for performing data analysis, preparing and presenting presentations and managing clients both independently and in a team setting.</p><p>We are looking for acquisition strategy, cross-sell up-sell, churn management, loyalty programs, revenue generation, Telecom Customer Segmentation, Tariff planning, Telecom Omni-Channel Strategist, Telecom Data/Cloud Play.</p><p> • You have experience working with&nbsp;Wireless Operators • You have a working knowledge of Customer Lifecycle Value • You are a fast learner, open to new challenges and new ways of doing things • You possess a strong intellectual curiosity • You excel in complex, fast-changing, unstructured environment • You are an excellent leader, negotiator, manager, and problem solver • You have experience as a Consultant&nbsp;for companies like BCG, McKinsey or Bain. • You have immediate availability</p><em></em><strong>This role may be a great fit if</strong><br><br><br><br><br><br><br><br><p> • You have no previous consulting experience • Your consulting experience is technical in nature (e.g., I.T., networking, etc..) • Your previous roles have primarily focused on sales or business development • You have no experience working with wireless carriers • You have no experience with business analysis tools and large data analysis</p><em></em><strong>This role is NOT a fit and you should NOT apply if</strong><br><br><br><br><br><p></p><strong>Candidate Requirements:</strong><ul></ul><li>3-5 years of consulting experience with a proven track record</li><li>Experience with teams working in a global (remote) environment</li><li>Experience in enterprise software preferred, but not required</li><li>Ability to rapidly grasp new areas within the CMT domain and quickly structure a broader concept</li><li>Strong analytical skills and familiarity with business analysis tools (e.g. Tableau, SQL, excel, and the similar)</li><li>Strong undergraduate and/or graduate academic credentials preferred</li><li>Exceptional oral and written communication skills</li><li>Fluency in English is a must</li><li>Project management experience is a nice to have</li><li>An MBA would be a significant plus</li><p></p><strong>Join our community of remote professionals!</strong><div> <div><div><p> <br><br> <b>To apply for this job please visit the URL below.</b> <br><br> Please reference <b>Jobspresso</b> in your job application, so that remote companies know where their best candidates are coming from  <br><br> <a href='https://telecombusinessconsultant.eventbrite.com?aff=funAleJobspresso' rel='nofollow'>https://telecombusinessconsultant.eventbrite.com?aff=funAleJobspresso →</a></p></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "-9Y95OHIQQit6P8XfTgN_w",
     "url": "https://remote.co/job/nocturnist-telemedicine/",
     "title": "Nocturnist Telemedicine",
