json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,56 @@
 {
  "items": [
   {
+    "id": "DvCX0PPARlW2igGfFnYgHg",
+    "url": "https://remote.co/job/senior-ios-developer-3/",
+    "title": "Senior iOS Developer",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=18, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=15, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Linux Academy",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 18, 2018 5:56:52 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Senior iOS Developer at <span>Linux Academy</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>KELLER, TEXAS</strong></p><p><strong>ENGINEERING </strong></p><p><strong>MOBILE</strong></p><p><strong>FULL-TIME</strong></p><p>Linux Academy is seeking an Senior iOS Developer to support our team and the thousands of students around the world who learn through us and our cloud technology. Our mission is to provide advanced training tools that increase skills and encourage critical thinking for advanced IT professionals. Linux Academy offers a full-featured training library with everything one needs to learn new skills and advance in one’s career path. As we continue to grow at an unprecedented pace, we need to find the best talent around. Come join us and help build our team!</p><p>You can expect to architect, develop, test, release, and support all Linux Academy applications within the Apple eco-system. Stay up to date on the latest and greatest Apple-related technologies and look for ways to integrate them for a better user experience.</p><p><strong>Your day to day will include:</strong></p><ul><li>Develop Applications within the Apple Ecosystem<ul><li>Code high-quality Apple products which serve to accessorize, enhance, and expand the educational offerings of Linux Academy and its sister companies</li><li>Maintain mobile products created throughout the year, not only avoiding tech debt, but keeping a close eye on new features and capabilities which could serve to enhance our mobile apps.</li><li>Provide student support when the Support team cannot properly assess or assist students with mobile-based tickets</li><li>Fix bugs and crashes reported by students as well as investigating and prioritizing feature suggestions</li><li>Maintain friendly, and most importantly, timely, conversations with students until their issue(s) are resolved</li></ul></li><li>Maintain Support for Mobile Applications<ul><li>Provide student support when the Support team cannot properly assess or assist students with mobile based tickets</li><li>Maintain friendly, and most importantly, timely, conversations with students until their issue(s) are resolved</li></ul></li></ul><p><strong>The ideal candidate</strong></p><ul><li>Intimate knowledge of iOS application lifecycle and the Human Interface Guidelines</li><li>Proficient in Swift and familiarity with its emerging best practices</li><li>Experience with integration of REST API’s and JSON</li><li>Knowledge of mobile architectures, trends, and technologies</li><li>Working knowledge of mobile design principles</li><li>Deep familiarity with CocoaTouch, and the frameworks provided therein</li><li>Trial by fire experience with the more idiosyncratic aspects of developing for the Apple ecosystem</li><li>Have published at least one original iOS app</li><li><strong>Must be available to work in office located in Keller, TX or if remote, be available during normal business hours and have a proven track record of working remotely</strong></li><li>You must be authorized to work in the United States without sponsorship</li></ul><p><strong>What’s in it for you?</strong></p><ul><li>High compensation with great bonus opportunities</li><li>Three weeks vacation, one week no-notice PTO</li><li>Health, dental, vision, life insurance provided free to employee; discounted to spouse/family</li><li>Free drinks/snacks for office-based employees</li><li><strong>Flexible schedule</strong></li><li>Simple IRA with non-elective contribution made by Linux Academy, opportunity to make voluntary contribution by employee</li><li>Satisfaction of helping others grow and learn</li><li>Opportunity to work with a really exciting, fun team and roll out new projects</li><li>Compensation increases proportionate to new knowledge gained</li></ul><p><strong>At Linux Academy-</strong></p><ul><li>We support others in their mission to learn and grow.</li><li>We are committed to changing the world by changing lives.</li><li>We believe in the curiosity to learn, the vulnerability to try, the persistence to succeed, and the strength of community.</li><li>We put our students’ futures first.</li><li>We dedicate ourselves to pushing the boundaries of online learning.</li><li>If you value these things too we would love to hear more from you.</li></ul>        </div><div>        <a href='https://jobs.lever.co/linuxacademy/816c077d-447f-4dc1-9be4-7066a770775d' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "vQ0DGu_wTFyxuEBjStV6_A",
     "url": "https://stackoverflow.com/jobs/191013/ios-developer-remote-x-team?a=123I0AJCa2iI",
     "title": "iOS Developer (Remote) at X-Team  ",
