--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,228 @@
 {
  "items": [
   {
+    "id": "pe8kt8mATRKrCa7NChVtWg",
+    "url": "https://angel.co/photage-1/jobs/71624-junior-mobile-ios",
+    "title": "Junior Mobile iOS",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=8, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Time",
+      "Mobile Developer",
+      "REMOTE1/100",
+      "Remote OK",
+      "Salt Lake City",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Phötage",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 35000,
+      "maxValue": 60000,
+      "info": "0.0% – 0.5%",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 19, 2018 4:50:05 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>Junior Mobile iOS at Phötage </h2><div>Salt Lake City, Remote · Full Time</div><div></div></div><div><div>Compensation</div><div>$35K–$60K<br>0.0%–0.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>We have an opening for a junior developer that has experience with iOS or Android development. You should be an ambitious fast learner with a desire to make cool stuff.</p><p>You should posses the following characteristics:<br>-Be an active listener and Communicator <br>-Have a passion for problem solving and learning<br>-A self manager</p><p>Coding Abilities:<br>-Ability to continue development on previously created X-Code projects, and posses the ability to develop a project from the ground up.<br>-Ability to engage in modular coding<br>-Understanding of basic data structures and analysis of algorithm.<br>-Basic HTTP and RESTful</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "hx7vTOWdRWGDQ1UvZmLDow",
+    "url": "https://whereverjobs.com/listing/4094/ios-developer-remote",
+    "title": "iOS Developer (Remote)",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:node.js/nodejs/13",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=31, go=3, nodejs=14, bigdata-ml=0, ruby=0, apple=22, java=2, gamedev=0, php=5, embedded=0, frontend=4}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "X-Team",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 19, 2018 4:32:21 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h3>iOS Developer (Remote)</h3><div>Company: X-Team<br><br></div><div>                                <p>The right individual will be self-driven. Someone who cares about maintainability of the code, automation, deployment processes and how to enable innovation through fostering a growing culture of Open Source. You will go beyond just coding and help to shape the engineering culture and best practices.<br><br><strong>Most important:</strong></p><ul><li>3+ years of experience in mobile iOS Development</li><li>Experience with Objective-C, CSS, Javascript, HTML</li><li>Experience with JSON, XML, SOAP, REST</li><li>Experience with server side technologies (Java, NodeJS, PHP)</li><li>Experience storing and indexing data</li><li>Knowledge of Swift and Xcode</li><li>Code optimization and performance improvements</li><li>Write well designed, testable, efficient code</li></ul><p><strong>Nice to have:</strong></p><ul><li>Experience with working remotely</li><li>Familiar/involved with open­ source projects</li></ul><p><strong>Personal:</strong></p><ul><li>Independent, self-motivated</li><li>Fluent in English, written and spoken</li><li>Proven track record of always learning and growing.</li><li>Proactive attitude</li><li>Possess a spirit of generosity</li></ul><p><strong>Perks:</strong></p><ul><li>Get the chance to work with big brands like Riot Games, Fox Broadcasting, Kaplan Inc., etc.</li><li>Live and work in one of our roaming hacker houses (X-Outposts) around the world.</li><li>Work from anywhere as part of a community of digital nomads.</li><li>Join our vibrant community, filled with opportunities to learn new skills together in study groups, join clubs (photography, gaming, etc.) and get free camera equipment/games/conferences/courses/massages/etc., charitable fundraisers, fitness &amp; yoga programs (+gym membership), etc. This is the community to be in if you're a remote developer.</li><li>We’ll provide up to $2,500 in funding for your learning and growth through our Unleash program, which provides opportunities to unleash your potential through initiatives that help you grow as a developer and explore your passions more each day.&nbsp;</li></ul>            </div><div>How to apply:<br><a href='https://x-team.com/remote-ios-developer-jobs/?utm_sourceWhereverJobs&amp;utm_medium=board' rel='nofollow'>x-team.com/remote-ios-developer-jobs/</a></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "jF9CGeseRaOtO1cW9eOQ0Q",
+    "url": "https://www.remotejobr.com/jobs/senior-ios-engineer-sopris-health",
+    "title": "SENIOR iOS ENGINEER",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:artificial-intelligence/bigdata-ml/4",
+      "DBG_TECH1:k/t/w:ios/apple/22",
+      "DBG_TECH1:k/t/w:ios/mobile/22",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=38, go=0, nodejs=0, bigdata-ml=4, ruby=0, apple=30, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 19, 2018 12:05:34 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div>        </div>                            <h2>SENIOR iOS ENGINEER</h2>                            <p>      </p><p>  <strong>Headquarters:</strong> Denver, CO    <br><strong>URL:</strong> <a href='https://www.soprishealth.com/careers' rel='nofollow'>https://www.soprishealth.com/careers</a></p><div><h2><span></span></h2></div><div><span>DESCRIPTION: Senior iOS Engineer (contract, contract-to-hire; remote)</span></div><div></div><div><br></div><div><span>ABOUT THE COMPANY</span></div><div><br></div><div><span>Sopris Health, an intelligent clinical operations platform, offers a pioneering A.I. medical scribe technology to tackle clinical inefficiencies. &nbsp;The new app, now available on iOS to U.S. physicians and healthcare providers, proved to save time for physicians and reduce the stress of dictation, while making more time available to speak with patients. &nbsp;</span></div><div></div><div><br></div><div><span>ABOUT THE TEAM</span></div><div><br></div><div><span>The Sopris Health engineering team is seeking a new member to accelerate the development of our provider facing iOS application. &nbsp;The goals of the engineering team are simple: make the highest quality, most robust, and most useful provider application in the marketplace by leveraging native applications that are driven by scalable backend infrastructure.</span></div><div></div><div><br></div><div><span>Sopris Health is an uncommon healthtech company: We have seasoned founders and an engineering and product team with decades of experience innovating in highly regulated product markets. &nbsp;Everyone on our team has a meaningful impact on product features, new directions in clinical documentation and regulation, and customer experience.</span></div><div></div><div><br></div><div><span>ABOUT YOU</span></div><div><br></div><ul> <li> <span>You have 3+ years of experience in native iOS development gained through shipping applications that users cannot live without</span><br><br> </li> <li> <span>You are excited about working in a Swift-only codebase and have experience with threading, performance tuning, and iOS technologies such as Grand Central Dispatch, CoreData, and CoreAudio</span><br><br> </li> <li> <span>You have published an application successfully to end users via the Apple App Store</span><br><br> </li> <li> <span>You are proficient in iOS development and deployment tools like Xcode and TestFlight</span><br><br> </li> <li> <span>You have leveraged RESTful APIs to connect iOS applications to back-end services</span><br><br> </li> <li> <span>You have previously used, and can communicate informed opinions on, popular iOS third party libraries you will use to accelerate your development</span><br><br> </li> <li> <span>You are familiar with modern software development including agile, unit testing, and cloud-based infrastructures</span><br><br> </li> <li> <span>You value—and wish to contribute to—the fast and energetic environment of a software startup</span><br><br> </li> <li> <span>You currently have or can acquire performant internet access (we’re a remote company)</span><br> </li> </ul><div><br></div><div><span>ABOUT THE OPPORTUNITY</span></div><div><br></div><ul> <li> <span>Work on an innovative iOS application that utilizes the most recent technology from Apple</span><br><br> </li> <li> <span>Work remote to accomplish all of the above from the comfort of the workplace of your choice</span><br><br> </li> <li> <span>Have a direct impact on the lives of our users who rely on us daily to complete their clinical documentation</span><br><br> </li> <li> <span>Join a cross-functional team that encourages collaboration and autonomy and includes experts in AI/ML, UX, design, and scalable software systems</span><br><br> </li> </ul><div><span>Sopris Health is an equal opportunity employer and encourages people of all backgrounds, genders, ethnicities, abilities, and sexual orientations to apply.</span></div><div><br></div><p><strong>To apply:</strong> Send your resume to <a rel='nofollow' href='mailto:aaron@soprishealth.com'>aaron@soprishealth.com</a></p>    <p></p>        <p>            </p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "sJqbcYDZRpeDHIDIJenjhw",
+    "url": "https://weworkremotely.com/remote-jobs/sopris-health-senior-ios-engineer",
+    "title": "Sopris Health: SENIOR iOS ENGINEER",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:artificial-intelligence/bigdata-ml/4",
+      "DBG_TECH1:k/t/w:ios/apple/22",
+      "DBG_TECH1:k/t/w:ios/mobile/22",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=38, go=0, nodejs=0, bigdata-ml=4, ruby=0, apple=30, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Sopris Health",
+      "sameAs": "https://www.soprishealth.com/careers"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 19, 2018 12:00:35 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>SENIOR iOS ENGINEER</h2><span>Company: Sopris Health<br></span><span>Headquarters: Denver, CO<br></span><span>https://www.soprishealth.com/careers<br><br></span><div><div><h2><span></span></h2></div><div><span>DESCRIPTION: Senior iOS Engineer (contract, contract-to-hire; remote)</span></div><div></div><div><br></div><div><span>ABOUT THE COMPANY</span></div><div><br></div><div><span>Sopris Health, an intelligent clinical operations platform, offers a pioneering A.I. medical scribe technology to tackle clinical inefficiencies. &nbsp;The new app, now available on iOS to U.S. physicians and healthcare providers, proved to save time for physicians and reduce the stress of dictation, while making more time available to speak with patients. &nbsp;</span></div><div></div><div><br></div><div><span>ABOUT THE TEAM</span></div><div><br></div><div><span>The Sopris Health engineering team is seeking a new member to accelerate the development of our provider facing iOS application. &nbsp;The goals of the engineering team are simple: make the highest quality, most robust, and most useful provider application in the marketplace by leveraging native applications that are driven by scalable backend infrastructure.</span></div><div></div><div><br></div><div><span>Sopris Health is an uncommon healthtech company: We have seasoned founders and an engineering and product team with decades of experience innovating in highly regulated product markets. &nbsp;Everyone on our team has a meaningful impact on product features, new directions in clinical documentation and regulation, and customer experience.</span></div><div></div><div><br></div><div><span>ABOUT YOU</span></div><div><br></div><ul><li><span>You have 3+ years of experience in native iOS development gained through shipping applications that users cannot live without</span><br><br></li><li><span>You are excited about working in a Swift-only codebase and have experience with threading, performance tuning, and iOS technologies such as Grand Central Dispatch, CoreData, and CoreAudio</span><br><br></li><li><span>You have published an application successfully to end users via the Apple App Store</span><br><br></li><li><span>You are proficient in iOS development and deployment tools like Xcode and TestFlight</span><br><br></li><li><span>You have leveraged RESTful APIs to connect iOS applications to back-end services</span><br><br></li><li><span>You have previously used, and can communicate informed opinions on, popular iOS third party libraries you will use to accelerate your development</span><br><br></li><li><span>You are familiar with modern software development including agile, unit testing, and cloud-based infrastructures</span><br><br></li><li><span>You value—and wish to contribute to—the fast and energetic environment of a software startup</span><br><br></li><li><span>You currently have or can acquire performant internet access (we’re a remote company)</span><br></li></ul><div><br></div><div><span>ABOUT THE OPPORTUNITY</span></div><div><br></div><ul><li><span>Work on an innovative iOS application that utilizes the most recent technology from Apple</span><br><br></li><li><span>Work remote to accomplish all of the above from the comfort of the workplace of your choice</span><br><br></li><li><span>Have a direct impact on the lives of our users who rely on us daily to complete their clinical documentation</span><br><br></li><li><span>Join a cross-functional team that encourages collaboration and autonomy and includes experts in AI/ML, UX, design, and scalable software systems</span><br><br></li></ul><div><span>Sopris Health is an equal opportunity employer and encourages people of all backgrounds, genders, ethnicities, abilities, and sexual orientations to apply.</span></div><div><br></div></div><div><h4>Apply for this position</h4><p>Send your resume to <a href='mailto:aaron@soprishealth.com' rel='nofollow'>aaron@soprishealth.com</a></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "DvCX0PPARlW2igGfFnYgHg",
     "url": "https://remote.co/job/senior-ios-developer-3/",
     "title": "Senior iOS Developer",
