--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,57 @@
 {
  "items": [
   {
+    "id": "D-zYB01EQrexsUklBMz4Zw",
+    "url": "https://stackoverflow.com/jobs/203112/ios-engineer-remote-fizzer?a=167hxhqkOcHS",
+    "title": "iOS Engineer (Remote) at Fizzer  ",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG_TECH1:k/t/w:ios/apple/16",
+      "DBG_TECH1:k/t/w:ios/mobile/16",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=32, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=26, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Fizzer",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "€",
+      "minValue": 40000,
+      "maxValue": 60000,
+      "info": "Equity",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 21, 2018 3:06:10 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2><span>iOS Engineer (Remote)</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Mid-Level, Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Postcards</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>11-50 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Fizzer | No office location<br></div><h3>Technologies</h3><div></div><div>ios</div><div>swift</div><div>realm</div>                <h3>Job description</h3>                <div><p><strong>About you</strong></p><p>As an iOS Engineer, you live on the front line of our products and the features used by thousands of people every day. Working on such role is challenging yet very impactful and rewarding. You have strong design and UX sensibility, high code quality standards and you care about performances, accessibility and API design. You can translate real-world problems into elegant code solutions.</p><p>You also share our engineering values:</p><ul><li><strong><a href='https://www.youtube.com/watch?v=uVRrf_SY0i8' rel='nofollow'>Care bear</a></strong>: We want ❤️</li><li><strong>Transparency</strong>: We discuss everything openly.</li><li><strong>Move Fast</strong>: No need to demonstrate for days, just do it.</li><li><strong>Knowledge Sharing</strong>: We're eager to learn.</li><li><strong>It's OK to fail</strong>: Succeed together, learn together.</li></ul><p><strong>Responsibilities</strong></p><ul><li>Get full ownership of the iOS app</li><li>Join the care team and speak with our users once a week</li><li>Participate in code reviews and provide feedback to your colleagues</li><li>Leave code better than you found it</li><li>Take care of your application in production: deploy, monitor, maintain</li><li>Create a positive environment for the people around you</li><li>Bring ideas to reality</li><li>Lead by example</li><li>Share knowledge with your team and help them grow</li></ul><p><strong>Requirements</strong></p><ul><li><strong>Fluent in french </strong></li><li>Minimum 2 years XP as an iOS Engineer</li><li>Strong expertise in Swift</li><li>Deep understanding of iOS SDK</li><li>Experience with Realm</li><li>Experience analyzing a feature in production using analytics and experiments</li><li>Experience designing complex apps</li><li>Understanding of unit and integration testing in a mobile environment</li></ul><p><strong>Benefits</strong></p><ul><li>100% remote: work from anywhere in the world </li><li>A new laptop</li><li>Fizzer credits</li><li>Stocks</li><li>Code and company retreats</li><li>Annual budget for books related to work</li><li>Travel budget (visit us when you want in our only office near the sea)</li></ul>                </div>            <div>        <a href='https://jobs.fizzer.com/offers/ios-engineer.html' rel='nofollow'>                        Apply now        </a></div>            <h3>About Fizzer</h3>            <div><p><strong>About us</strong></p><p>At Fizzer, we deliver your best moments straight into the hands of the people you love. You take a picture, you customise it and we take care of the rest!</p><p>We started our adventure 4 years ago in France with a challenge: make postcards great again . Today, with more than 500K active users and millions of postcards sent all over the world, our goal remains the same and our community is growing.</p><p>Internally, we're a family sized team iterating over our remote culture. Thanks to the nature of our business we were able to gather great people from very different areas: printers, designers, advertisers, customer support or developers. Today, we're proud of our diversity and balanced parity which makes the strength of our team.</p><p><strong>Our product way</strong></p><p>Building a great product does not come easily and we know it. We spend most of our time in direct contact with our users (senders and receivers) to understand their needs and listen to their voices. Thanks to our community, we have many ideas on how to make our product awesome. To make sure we always focus on the right goals, we follow simple guidelines:</p><ul><li>Create top quality postcards and blow people's minds</li><li>Have a stellar user experience on our apps</li><li>Make our support process the most human and efficient for our community</li></ul><p>TL;DR Focus on the user and all else will follow ;)</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Remote culture (Work from anywhere in the world)</span>                            </li>                            <li>                                <span></span>                                <span>Flexible hours: We are objective driven</span>                            </li>                            <li>                                <span></span>                                <span>Code and company retreats every 6 months</span>                            </li>                            <li>                                <span></span>                                <span>Travel budget: Get to meet your fellow workers</span>                            </li>                            <li>                                <span></span>                                <span>Budget for books: Anything that will help you grow</span>                            </li>                            <li>                                <span></span>                                <span>HQ in a small village by the sea in Normandie ;)</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "pe8kt8mATRKrCa7NChVtWg",
     "url": "https://angel.co/photage-1/jobs/71624-junior-mobile-ios",
     "title": "Junior Mobile iOS",
